@@ -66,9 +66,9 @@ Depends: adduser,
          lxd,
          ntpdate,
          pristine-tar,
-         python,
-         python-apt,
-         python-lpbuildd (=${source:Version}),
+         ${lpbuildd-python-prefix},
+         ${lpbuildd-python-prefix}-apt,
+         ${lpbuildd-python-prefix}-lpbuildd (= ${source:Version}),
          sbuild,
          schroot,
          sudo,
