@@ -79,7 +79,7 @@ d_start() {
     # Useful for certain kinds of image builds.
     modprobe nbd || true
 
-    su - buildd -c "BUILDD_SLAVE_CONFIG=$CONFROOT/$CONF twistd --no_save --pidfile $PIDFILE --python $TACFILE --logfile $LOGFILE --umask 022"
+    su - buildd -c "BUILDD_SLAVE_CONFIG=$CONFROOT/$CONF twistd3 --no_save --pidfile $PIDFILE --python $TACFILE --logfile $LOGFILE --umask 022"
 }
 
 #
