@@ -24,6 +24,7 @@ launchpad-buildd (190) UNRELEASED; urgency=medium
   * Add a proper wrapper for check-implicit-pointer-functions.
   * Add a python3-lpbuildd binary package.
   * Fix LXD.run to not default to universal_newlines=True.
+  * Run on Python 3 when built for >= bionic.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100
 
